--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 
-members = [ "day01", "day02", "day03", "day04","util"]
+members = [ "day01", "day02", "day03", "day04", "day05","util"]
