--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 # will have compiled files and executables
 debug/
 target/
-*/input.txt
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
@@ -20,4 +19,9 @@ Cargo.lock
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Advent of Code stuff
+# Each day's input
+*/input.txt
+# And the sample input for the current problem
 sample.txt
