--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
 [workspace]
 
-members = [ "day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09", "day10", "day11","util"]
+members = [ "day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09", "day10", "day11", "day12", "util"]
+resolver = "2"
